@@ -4,6 +4,7 @@
  **
  * OpenRemote, the Home of the Digital Home.
  * Copyright 2008-2013, OpenRemote Inc.
+ * Copyright 2009-2015, Juha Lindfors. All rights reserved.
  *
  * See the contributors.txt file in the distribution for a
  * full listing of individual contributors.
@@ -45,7 +46,9 @@
             <value>classpath:lutron_homeworks.properties</value>
             <value>classpath:denonAVRSerial.properties</value>
             <value>classpath:enocean.properties</value>
-          </list>
+            <value>classpath:ict_protege.properties</value>
+            <value>classpath:zwave.properties</value>
+        </list>
       </property>
   </bean>
 
@@ -103,7 +106,21 @@
     <property name="port" value="${lutron_homeworks.port}" />
   </bean>
   
+  <bean id="ICTProtegeConfig" class="org.openremote.controller.ICTProtegeConfiguration">
+	<property name="address" value="${ict_protege.address}" />
+	<property name="monitoringPIN" value="${ict_protege.monitoring_pin}" />
+	<property name="encryptionType" value="${ict_protege.encryption_type}" />
+	<property name="encryptionKey" value="${ict_protege.encryption_key}" />
+  </bean>
+
   <bean id="lutronHomeWorksGateway" class="org.openremote.controller.protocol.lutron.LutronHomeWorksGateway"/>
+
+  <bean id="zwaveConfig" class="org.openremote.controller.ZWaveConfiguration">
+    <property name="comPort" value="${zwave.comPort}" />
+    <property name="commLayer" value="${zwave.commLayer}" />
+    <property name="padHost" value="${zwave.pad.host}" />
+    <property name="padPort" value="${zwave.pad.port}" />
+  </bean>
 
   <bean id="enoceanConfig" class="org.openremote.controller.EnOceanConfiguration">
     <property name="comPort" value="${enocean.comPort}" />
@@ -187,7 +204,6 @@
     <constructor-arg value = "Default Deployer"/>
     <constructor-arg ref = "statusCache"/>
     <constructor-arg ref = "configuration"/>
-    <constructor-arg ref = "beehiveCmdCheckService"/>
     <constructor-arg>
       <map>
         <entry key = "2.0" value-ref = "schema20"/>
@@ -197,9 +213,6 @@
 
   </bean>
 
-  <bean id = "beehiveCmdCheckService" class = "org.openremote.controller.service.BeehiveCommandCheckService">
-    <constructor-arg ref = "configuration"/>
-  </bean>
 
   <!--
    | TODO   : XML mappers
@@ -271,6 +284,7 @@ The needed classes have to be provided as a jar file and copied to lib folder.
         <entry key = "udpListener"      value-ref = "udpListenerCommandBuilder"/>
         <entry key = "enocean"          value-ref = "enoceanCommandBuilder"/>
         <entry key = "rrdGraphUrl"      value-ref = "rrdGraphUrlCommandBuilder"/>
+        <entry key = "ictprotege"       value-ref = "protegeCommandBuilder"/>
       </map>
     </constructor-arg>
 
@@ -415,7 +429,10 @@ The needed classes have to be provided as a jar file and copied to lib folder.
   <bean id = "lagartoCommandBuilder" class = "org.openremote.controller.protocol.lagarto.LagartoCommandBuilder">
     <property name="configuration" ref="configuration"/>
   </bean>
-
+  
+  <!-- ICT Protege Command Builder for Protege devices -->
+  <bean id = "protegeCommandBuilder" class = "org.openremote.controller.protocol.ictprotege.ProtegeCommandBuilder" />
+  
   <!-- TODO -->
   <bean id = "componentFactory" class = "org.openremote.controller.component.ComponentFactory">
     <property name = "componentBuilders">
@@ -524,4 +541,3 @@ The needed classes have to be provided as a jar file and copied to lib folder.
 	</bean>
 
 </beans>
-
